--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "recharts": "^3.4.1",
     "lucide-react": "^0.554.0",
     "xlsx": "^0.18.5",
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
+    "@netlify/blobs": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
