--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,6 @@
-# Netlify 全局跨域配置
-[[
-headers
-]]
+[[headers]]
 for = "/*"
-[
-headers.values
-]
+[headers.values]
 Access-Control-Allow-Origin = "*"
 Access-Control-Allow-Methods = "GET, POST, OPTIONS"
 Access-Control-Allow-Headers = "Content-Type"
